<resources>
    <string name="app_name" translatable="false">ApiTest</string>
    <string name="title_activity_maps">Map</string>
    <string name="new_room">NEW ROOM</string>
    <string name="room_name">Room Name</string>
    <string name="capacity">Capacity</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_room_name">Enter the new room name</string>
    <string name="enter_room_capacity">Enter the new room capacity</string>
    <string name="enter">Enter</string>
    <string name="join">Join</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="modify">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="search_country">Search for countries</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>
