<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomsActivity">

    <Button
        android:id="@+id/newRoom"
        android:layout_width="107dp"
        android:layout_height="54dp"
        android:layout_marginTop="75dp"
        android:onClick="newRoom"
        android:text="@string/new_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="412dp"
        android:layout_height="412dp"
        android:layout_marginTop="192dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newRoomText" />

    <EditText
        android:id="@+id/newRoomText"
        android:layout_width="196dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRoomName"
        android:layout_width="86dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
        android:text="@string/room_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewCapacity"
        android:layout_width="86dp"
        android:layout_height="22dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="105dp"
        android:text="@string/capacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/capacity"
        android:layout_width="79dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/newRoomText"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>